fixed overflow on main screen

--- a/client/src/styles/telegram.css
+++ b/client/src/styles/telegram.css
@@ -59,9 +59,7 @@
 html, body {
   height: 100%;
   height: 100dvh;
-  overflow: hidden;
   overscroll-behavior: none;
-  touch-action: manipulation;
 }
 
 body {
